# LabsC-

sfml.1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
sfml.1/00/: Makefile  cmake_install.cmake
sfml.1/01/: Makefile  cmake_install.cmake
sfml.1/02/: Makefile  cmake_install.cmake  main.cpp
sfml.1/11/: Makefile  cmake_install.cmake  main.cpp
sfml.1/12/: Makefile  cmake_install.cmake  main.cpp
sfml.1/13/: Makefile  cmake_install.cmake  main.cpp
sfml.2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
sfml.2/00/: Makefile  cmake_install.cmake  main.cpp
sfml.2/01/: Makefile  cmake_install.cmake  main.cpp
sfml.2/02/: Makefile  cmake_install.cmake  main.cpp
sfml.2/sfml2.1/: Makefile  cmake_install.cmake  main.cpp
sfml.2/sfml2.2/: main.cpp
sfml.3/: CMakeLists.txt
sfml.3/02/: main.cpp
sfml.3/03/: main.cpp
sfml.3/04/: CMakeLists.txt  main.cpp
sfml.3/sfml.3.1/: CMakeLists.txt  main.cpp
sfml.3/sfml.3.2/: CMakeLists.txt  main.cpp
sfml.3/sfml.3.3/: CMakeLists.txt  main.cpp
workshop1/: CMakeLists.txt
workshop1/workshop1.1/: CMakeLists.txt  main.cpp
workshop1/workshop1.2/: CMakeLists.txt  main.cpp
workshop1/workshop1.3/: CMakeLists.txt  main.cpp
workshop1/workshop1.4/: CMakeLists.txt  main.cpp
